Indexer v4: town notes

--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -22,7 +22,16 @@
         <br/>
         <br/>
 
-	      <h4>v3.9.1 15-04-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
+	      <h4>v4.0.0 17-04-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
+	      <p>- Users can now create and share notes about specific towns</p>
+	      <p>- BETA: Added unit intelligence to the command overview as an optional enhancement. If you want to try this out, enable it in the script settings.</p>
+	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/0d2988e189820bbd07e65e2bce80a12f429bf4a2#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
+		      <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
+	      </a>
+
+	      <hr/>
+
+	      <h4>v3.9.1 15-04-2020</h4>
 	      <p>- Bugfix for keyboard shortcuts in inbox</p>
 	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/34b538ccf9726da05c5ebc41f53cf8065f415c15#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
 		      <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
