--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -251,7 +251,7 @@
 	              <p><strong>The best time to attack this player is usually around {{lowestIndex<10?'0':''}}{{lowestIndex}}:00h local time.</strong>
 	                {{playerName}}'s attack frequency is lowest around this time. This is only an indication, based on their historical attack point data in the last 4 weeks. All times are in the same timezone as the local Grepolis server ({{world}}).</p>
 	              <p><strong>Data source: </strong>This graph is based entirely on an aggregation of the public attack points endpoint: <a href="https://{{world}}.grepolis.com/data/player_kills_att.txt" target="_blank">https://{{world}}.grepolis.com/data/player_kills_att.txt</a>
-		              &nbsp;(<a href="https://github.com/GrepoDataTools/grepodata-backend/blob/6adb95c761c0720e20a7f574747d0c149b53872c/Software/Library/Elasticsearch/Diff.php#L593" target="_blank">View source code<i class="fa fa-github" aria-hidden="true"></i></a>)</p>
+		              &nbsp;(<a href="https://github.com/GrepoDataTools/grepodata-backend/blob/6adb95c761c0720e20a7f574747d0c149b53872c/Software/Library/Elasticsearch/Diff.php#L593" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> Source code</a>)</p>
 	            </div>
 
             </mat-tab>
