--- a/src/app/indexer/town/town.component.scss
+++ b/src/app/indexer/town/town.component.scss
@@ -9,6 +9,15 @@
   max-width: unset !important;
 }
 
+.note-count {
+  background: #009688;
+  height: 26px;
+  width: 26px;
+  border-radius: 10px;
+  color: #FFFFFF;
+  padding-top: 2px;
+}
+
 .intel-cell {
   overflow-x: auto !important;
   overflow-y: hidden !important;
